win32: when activating app, never restack below a GDK_WINDOW_TEMP

When the application gets activated, avoid to restack windows below a
GDK_WINDOW_TEMP, as that will implicitly move the window to the TOPMOST group.

https://bugzilla.gnome.org/show_bug.cgi?id=695200